# gather-vision-web

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-analysis.yml  codeql.yml  create-package.yml
src/: manage.py
src/gather_vision_web/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
src/gather_vision_web/apps/electricity/: apps.py  models.py
src/gather_vision_web/apps/electricity/migrations/: 0001_initial.py  0002_initial.py
src/gather_vision_web/apps/explore/: apps.py  models.py  urls.py
src/gather_vision_web/apps/explore/management/commands/: visionloaddata.py
src/gather_vision_web/apps/explore/migrations/: 0001_initial.py  0002_alter_area_name_alter_origin_url.py
src/gather_vision_web/apps/legislatures/: apps.py
src/gather_vision_web/apps/music/: apps.py
src/gather_vision_web/apps/transport/: apps.py  models.py
src/gather_vision_web/apps/transport/migrations/: 0001_initial.py
src/gather_vision_web/apps/water/: apps.py  models.py
src/gather_vision_web/apps/water/migrations/: 0001_initial.py  0002_alter_measure_level.py
src/gather_vision_web/proj/: admin.py  apps.py  asgi.py  settings.py  settings_env.py  urls.py  wsgi.py
src/steady_ground/: apps.py
